# todo_app_full

./: .env  pyproject.toml
tests/: test_main.py
todo_app/: client.py  main.py  models.py  settings.py
