[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Muhammadzainattiq <zainatteeq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
psycopg = {extras = ["binary"], version = "^3.1.19"}
psycopg2 = "^2.9.9"
streamlit = "^1.34.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
